<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HOMS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>




    ////////Client Settings
    <string name="server_url">http://localhost:38575/RPC2</string>


    ////////Login Activity
    // Toasts
    <string name="login_incorrect">Incorrect Login Credentials</string>
    <string name="login_successful">Login Successful</string>
    <string name="login_error_generic">Error During Login!</string>
    <string name="login_error_connection">Could not connect to host. Check settings.</string>
    <string name="login_no_username">Enter a Username</string>
    <string name="login_no_password">Enter a Password</string>
    //Input Fields
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Server</string>
    <string name="login_server_hint">Password</string>
    //Buttons
    <string name="login_button_text">Sign In</string>



    /////////Settings Activity
    <string name="title_activity_settings_activity2">SettingsActivity2</string>
    
    
    /////////Home Activity
    <string name="home_button_new_order">New Order</string>
    <string name="home_button_add_items">Add Items</string>
    <string name="home_button_get_bill">Get Bills</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_add_order">AddOrderActivity</string>

</resources>
