<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    tools:context="ioawnen.homs_android.HomeActivity"
    android:columnCount="1"
    android:rowCount="3"
    android:useDefaultMargins="true">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_button_new_order"
        android:id="@+id/newOrderButton"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_gravity="top" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_button_add_items"
        android:id="@+id/addItemsButton"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_gravity="center_vertical" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_button_get_bill"
        android:id="@+id/viewBillsButton"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_gravity="bottom" />
</FrameLayout>
